# back_lt_pedidos

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
app/: __init__.py  main.py  schemas.py
app/testeScripts/: cotacao-compra.xlsx
examples/: ORDEMDECOMPRAS.xlsx  cotacao-compra-15_09_2025 10_21_29.xlsx:Zone.Identifier  main.py  main2.py  main3.py  relatorio.html
